--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,57 @@
 /*  your css code here. If applicable */
+body{
+	background-color:  #f5f5f5;
+}
 header{
 	background-color: #011e29;
 	color: white;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.container{
+	display: flex;
+	justify-content: space-around;
+	margin-left: 20px;
+	margin-right: 20px;
+	
+}
+
+.first-box{
+	height: 120px;
+	width: 180px;
+	background-color: white;
+	padding: 10px;
+	margin-top: 10px;
+	border-radius: 15px;
+	text-align: center;
+}
+.first-box li{
+	font-size: 14px;
+}
+.main-article{
+	height:180px;
+	width: 250px;
+	background-color: white;
+	text-align: center;
+	border-radius: 15px;
+	padding: 10px;
+	margin-top: 10px;
+	
+}
+.main-article p{
+	font-size: 14px;
+}
+
+.pictures{
+	background-color: white;
+	height:1500px
+	width: 150px;
+	border-radius: 15px;
+	margin-top: 10px;
+}
+.pictures img{
+	height: 120px;
+	width:  150px;
 }
